List_updated